# Malgoro

./: .gitignore  CONTRIBUTING.md  MALGORO_SUMMARY.md  PKGBUILD  PROJECT_STATUS.md  README.md  STATUS.md
MalgoroDE/: ARCHITECTURE.md  CMakeLists.txt  README.md
MalgoroDE/data/: malgoro-session  malgoro.desktop
MalgoroDE/src/launcher/: CMakeLists.txt  Menu.h
MalgoroDE/src/panel/: Applet.h  CMakeLists.txt  Clock.h  Panel.h  WindowList.h
MalgoroDE/src/settings/: CMakeLists.txt
MalgoroDE/src/themes/: CMakeLists.txt  ThemeManager.h
MalgoroDE/src/utils/: CMakeLists.txt
MalgoroDE/src/widgets/: CMakeLists.txt
MalgoroDE/src/wm/: CMakeLists.txt  Decorator.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h  Workspace.h
config/: repositories.conf
docs/: GITHUB_SETUP.md  MULTI_PACKAGE_QUICKSTART.md  NEXT_STEPS.md  PACKAGE_CREATION.md  RECOMMENDED_REPOS.md  REPOSITORY_EXAMPLES.md  REPOSITORY_STRUCTURE.md
scripts/install/: install.sh
scripts/package/: create-package.sh  validate-package.sh
scripts/test/: test-malgoropkg.sh
templates/multi-package/: .gitignore  README.md
templates/single-package/: .gitignore  PKGINFO  README.md  build.sh
